--- a/Machine Learning no Marketing Digital.ipynb
+++ b/Machine Learning no Marketing Digital.ipynb
@@ -312,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('train.csv', dtype={'date':object,'fullVisitorId':object,'VisitId':object})"
+    "df = pd.read_csv('train.csv', dtype={'date':object,'fullVisitorId':object,'visitId':object})"
    ]
   },
   {
@@ -332,7 +332,7 @@
        "socialEngagementType    object\n",
        "totals                  object\n",
        "trafficSource           object\n",
-       "visitId                  int64\n",
+       "visitId                 object\n",
        "visitNumber              int64\n",
        "visitStartTime           int64\n",
        "dtype: object"
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
        "transactionRevenue                                                       NaN  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        " 'newVisits']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2088,7 @@
        "22"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2507,7 @@
        "transactionRevenue                             NaN  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2518,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
        "(12283, 27)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2548,7 +2548,7 @@
        "date                  object\n",
        "fullVisitorId         object\n",
        "sessionId             object\n",
-       "visitId                int64\n",
+       "visitId               object\n",
        "visitNumber            int64\n",
        "visitStartTime         int64\n",
        "browser               object\n",
@@ -2574,7 +2574,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2584,400 +2584,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "quant = ['hits','pageviews', 'transactionRevenue']"
+    "Changing dtype of some numerical columns that are classified as strings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "quant = ['hits','pageviews', 'transactionRevenue']\n",
     "for column in quant:\n",
     "    df[column] = pd.to_numeric(df[column])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>channelGrouping</th>\n",
-       "      <th>date</th>\n",
-       "      <th>fullVisitorId</th>\n",
-       "      <th>sessionId</th>\n",
-       "      <th>visitId</th>\n",
-       "      <th>visitNumber</th>\n",
-       "      <th>visitStartTime</th>\n",
-       "      <th>browser</th>\n",
-       "      <th>operatingSystem</th>\n",
-       "      <th>isMobile</th>\n",
-       "      <th>...</th>\n",
-       "      <th>networkDomain</th>\n",
-       "      <th>campaign</th>\n",
-       "      <th>source</th>\n",
-       "      <th>medium</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>referralPath</th>\n",
-       "      <th>adContent</th>\n",
-       "      <th>hits</th>\n",
-       "      <th>pageviews</th>\n",
-       "      <th>transactionRevenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Organic Search</td>\n",
-       "      <td>20160902</td>\n",
-       "      <td>9674781571160116268</td>\n",
-       "      <td>9674781571160116268_1472804607</td>\n",
-       "      <td>1472804607</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1472804607</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>Windows</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>unknown.unknown</td>\n",
-       "      <td>(not set)</td>\n",
-       "      <td>google</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>(not provided)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Organic Search</td>\n",
-       "      <td>20160902</td>\n",
-       "      <td>8590648239310839049</td>\n",
-       "      <td>8590648239310839049_1472835928</td>\n",
-       "      <td>1472835928</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1472835928</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>Macintosh</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>tpnet.pl</td>\n",
-       "      <td>(not set)</td>\n",
-       "      <td>google</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>(not provided)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Affiliates</td>\n",
-       "      <td>20160902</td>\n",
-       "      <td>9772828344252850532</td>\n",
-       "      <td>9772828344252850532_1472856802</td>\n",
-       "      <td>1472856802</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1472856802</td>\n",
-       "      <td>Chrome</td>\n",
-       "      <td>Macintosh</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>phonevision.com.ar</td>\n",
-       "      <td>Data Share Promo</td>\n",
-       "      <td>Partners</td>\n",
-       "      <td>affiliate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Organic Search</td>\n",
-       "      <td>20160902</td>\n",
-       "      <td>1350700416054916432</td>\n",
-       "      <td>1350700416054916432_1472879649</td>\n",
-       "      <td>1472879649</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1472879649</td>\n",
-       "      <td>Safari</td>\n",
-       "      <td>iOS</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>comcast.net</td>\n",
-       "      <td>(not set)</td>\n",
-       "      <td>google</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>(not provided)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Organic Search</td>\n",
-       "      <td>20160902</td>\n",
-       "      <td>1350700416054916432</td>\n",
-       "      <td>1350700416054916432_1472829671</td>\n",
-       "      <td>1472829671</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1472829671</td>\n",
-       "      <td>Safari</td>\n",
-       "      <td>iOS</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>att.net</td>\n",
-       "      <td>(not set)</td>\n",
-       "      <td>google</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>(not provided)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  channelGrouping      date        fullVisitorId  \\\n",
-       "0  Organic Search  20160902  9674781571160116268   \n",
-       "1  Organic Search  20160902  8590648239310839049   \n",
-       "2      Affiliates  20160902  9772828344252850532   \n",
-       "3  Organic Search  20160902  1350700416054916432   \n",
-       "4  Organic Search  20160902  1350700416054916432   \n",
-       "\n",
-       "                        sessionId     visitId  visitNumber  visitStartTime  \\\n",
-       "0  9674781571160116268_1472804607  1472804607            1      1472804607   \n",
-       "1  8590648239310839049_1472835928  1472835928            1      1472835928   \n",
-       "2  9772828344252850532_1472856802  1472856802            1      1472856802   \n",
-       "3  1350700416054916432_1472879649  1472879649            2      1472879649   \n",
-       "4  1350700416054916432_1472829671  1472829671            1      1472829671   \n",
-       "\n",
-       "  browser operatingSystem  isMobile  ...       networkDomain  \\\n",
-       "0  Chrome         Windows     False  ...     unknown.unknown   \n",
-       "1  Chrome       Macintosh     False  ...            tpnet.pl   \n",
-       "2  Chrome       Macintosh     False  ...  phonevision.com.ar   \n",
-       "3  Safari             iOS      True  ...         comcast.net   \n",
-       "4  Safari             iOS      True  ...             att.net   \n",
-       "\n",
-       "           campaign    source     medium         keyword referralPath  \\\n",
-       "0         (not set)    google    organic  (not provided)          NaN   \n",
-       "1         (not set)    google    organic  (not provided)          NaN   \n",
-       "2  Data Share Promo  Partners  affiliate             NaN          NaN   \n",
-       "3         (not set)    google    organic  (not provided)          NaN   \n",
-       "4         (not set)    google    organic  (not provided)          NaN   \n",
-       "\n",
-       "  adContent hits pageviews transactionRevenue  \n",
-       "0       NaN    1         1                NaN  \n",
-       "1       NaN    1         1                NaN  \n",
-       "2       NaN    1         1                NaN  \n",
-       "3       NaN    1         1                NaN  \n",
-       "4       NaN    5         4                NaN  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.transactionRevenue.fillna(0, inplace=True)\n",
     "df.transactionRevenue = df.transactionRevenue / 1000000 # the values were multiplied by 10ˆ6"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Feature Engineering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 851,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_quant = df.groupby('fullVisitorId',as_index=False)[quant].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 852,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fullVisitorId</th>\n",
-       "      <th>bounces</th>\n",
-       "      <th>hits</th>\n",
-       "      <th>newVisits</th>\n",
-       "      <th>pageviews</th>\n",
-       "      <th>transactionRevenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0002365800130207040</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0010286039787739137</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0011056874471185769</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0014443856125569702</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0017260116665815114</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         fullVisitorId  bounces  hits  newVisits  pageviews  \\\n",
-       "0  0002365800130207040      1.0     1        1.0          1   \n",
-       "1  0010286039787739137      0.0     4        1.0          3   \n",
-       "2  0011056874471185769      0.0     2        1.0          2   \n",
-       "3  0014443856125569702      1.0     1        1.0          1   \n",
-       "4  0017260116665815114      0.0     2        0.0          2   \n",
-       "\n",
-       "   transactionRevenue  \n",
-       "0                 0.0  \n",
-       "1                 0.0  \n",
-       "2                 0.0  \n",
-       "3                 0.0  \n",
-       "4                 0.0  "
-      ]
-     },
-     "execution_count": 852,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_quant.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 853,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9997, 6)"
-      ]
-     },
-     "execution_count": 853,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_quant.shape"
    ]
   },
   {
@@ -4060,7 +3691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4069,7 +3700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4078,7 +3709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4145,7 +3776,7 @@
        "4  0017260116665815114            6"
       ]
      },
-     "execution_count": 883,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
